Adiciona página de pedidos pendentes Adiciona funcionalidade de pedidos falsos

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/FADERGS-2019/frontend#readme",
   "devDependencies": {
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "nodemon": "^1.19.3"
+  },
+  "dependencies": {
+    "uuid": "^3.3.3"
   }
 }
